--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Wurst技术文档</title> 
 </head>
 <body style="background-color:rgb(25, 25, 25);">
-<h2 style="color:rgb(255, 255, 255);">这是一个标题</h2>
+<h2 style="color:rgb(255, 255, 255);">破破带我发大财</h2>
 <p style="color:rgb(255, 255, 255);">这是一个段落。</p>
 </body>
 </html>
