--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>Wurst技术文档</title> 
+<title>Tg技术文档</title> 
 </head>
 <body style="background-color:rgb(25, 25, 25);">
 <h2 style="color:rgb(255, 255, 255);">破破带我发大财</h2>
