--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <title>Tg技术文档</title> 
 </head>
 <body style="background-color:rgb(25, 25, 25);">
-<h2 style="color:rgb(255, 255, 255);">破破带我发大财</h2>
+<h1 style="color:rgb(255, 255, 255);">Tg技术文档</h1>
 <p style="color:rgb(255, 255, 255);">这是一个段落。</p>
 </body>
 </html>
-
+https://yjq7035.github.io/Tgol/
 <ol>
     <li style="color:rgb(255, 255, 255);">Coffee</li>
     <li style="color:rgb(255, 255, 255);">Tea</li>
