--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
 <title>Tg技术文档</title> 
 </head>
 <body style="background-color:rgb(25, 25, 25);">
-<h2 style="color:rgb(255, 255, 255);" >Tg技术文档</h2>
-<a href="https://yjq7035.github.io/Tgol/">访问菜鸟教程</a>
-<p style="color:rgb(255, 255, 255);">这是一个段落。</p>
+<h2 style="color:rgb(255, 255, 255);" >
+  Tg技术文档
+</h2>
+<hr><!------------------------------->
+
+<p style="color:rgb(255, 255, 255);">
+  <a>
+  <link rel="stylesheet" type="text/css" href="wurst\a01.html"   />
+  这是一个段落。
+  </a>
+</p>
+
+
+<ol>
+  <li style="color:rgb(255, 255, 255);">Coffee</li>
+  <li style="color:rgb(255, 255, 255);">Tea</li>
+  <li style="color:rgb(255, 255, 255);">Milk</li>
+</ol>
+
 </body>
 </html>
 
-<ol>
-    <li style="color:rgb(255, 255, 255);">Coffee</li>
-    <li style="color:rgb(255, 255, 255);">Tea</li>
-    <li style="color:rgb(255, 255, 255);">Milk</li>
-  </ol>
