--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <hr><!------------------------------->
 
 <p style="color:rgb(255, 255, 255);">
-  <a>
-  <link rel="stylesheet" type="text/css" href="wurst\a01.html"   />
+  <a href="wurst\a01.html" > 
   这是一个段落。
   </a>
 </p>
