--- a/index.html
+++ b/index.html
@@ -2,27 +2,39 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>Tg技术文档</title> 
+<title>War3 技术文档</title> 
 </head>
-<body style="background-color:rgb(25, 25, 25);">
-<h2 style="color:rgb(255, 255, 255);" >
-  Tg技术文档
-</h2>
-<hr><!------------------------------->
+<body style="background-color:rgb(25, 25, 25);" >
+<!------------------------------->
+<header>
+  <h2>
+    <a 
+      href="index.html" class="home-link router-link-exact-active router-link-active" 
+      aria-current="page"
+      style="color:rgb(255, 255, 255);"
+      >
+      技术文档 | 首页
+    </a>
+  </h2>
+</header>
 
-<p style="color:rgb(255, 255, 255);">
-  <a href="wurst\a01.html" > 
-  这是一个段落。
-  </a>
-</p>
-
-
-<ol>
-  <li style="color:rgb(255, 255, 255);">Coffee</li>
-  <li style="color:rgb(255, 255, 255);">Tea</li>
-  <li style="color:rgb(255, 255, 255);">Milk</li>
-</ol>
-
-</body>
+<!------------------------------->
+<aside>
+  <ul style="color:rgb(255, 255, 255);" >
+    <div style="color:#0000FF">
+      <li><a href="index.html" >首页</a>
+        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
+          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
+      <li><a href="wurst\a01.html" aria-current="page" class="sidebar-link" style="color:rgb(0, 200, 50);" >wurst</a>
+        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
+          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
+      <li><a href="/" aria-current="page" class="sidebar-link" style="color:rgb(0, 200, 50);" >ydwe</a>
+        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
+          <a href="ydwe/开启生命模拟.html" class="sidebar-link">开启模拟生命</a></li></ul></li>
+      <li><a href="/" aria-current="page" class="sidebar-link"style="color:rgb(0, 200, 50);" >外部编辑器</a>
+        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
+          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
+    </div>
+  </ul>
+</aside>
 </html>
-
