--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
       <li><a href="/" aria-current="page" class="sidebar-link" style="color:rgb(0, 200, 50);" >ydwe</a>
         <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
-          <a href="ydwe/开启生命模拟.html" class="sidebar-link">开启模拟生命</a></li></ul></li>
+          <a href="ydwe/模拟生命.html" class="sidebar-link">模拟生命</a></li></ul></li>
       <li><a href="/" aria-current="page" class="sidebar-link"style="color:rgb(0, 200, 50);" >外部编辑器</a>
         <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
           <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
