--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
-<html>
-<head> 
-<meta charset="utf-8"> 
-<title>War3 技术文档</title> 
-</head>
-<body style="background-color:rgb(25, 25, 25);" >
-<!------------------------------->
-<header>
-  <h2>
-    <a 
-      href="index.html" class="home-link router-link-exact-active router-link-active" 
-      aria-current="page"
-      style="color:rgb(255, 255, 255);"
-      >
-      技术文档 | 首页
-    </a>
-  </h2>
-</header>
+<html lang="zh-CN" class="translated-ltr">
 
-<!------------------------------->
-<aside>
-  <ul style="color:rgb(255, 255, 255);" >
-    <div style="color:#0000FF">
-      <li><a href="index.html" >首页</a>
-        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
-          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
-      <li><a href="wurst\a01.html" aria-current="page" class="sidebar-link" style="color:rgb(0, 200, 50);" >wurst</a>
-        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
-          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
-      <li><a href="/" aria-current="page" class="sidebar-link" style="color:rgb(0, 200, 50);" >ydwe</a>
-        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
-          <a href="ydwe/模拟生命.html" class="sidebar-link">模拟生命</a></li></ul></li>
-      <li><a href="/" aria-current="page" class="sidebar-link"style="color:rgb(0, 200, 50);" >外部编辑器</a>
-        <ul class="sidebar-sub-headers"><li class="sidebar-sub-header">
-          <a href="/#更新日志" class="sidebar-link">更新日志</a></li></ul></li>
-    </div>
-  </ul>
-</aside>
-</html>
+    <meta charset="UTF-8">
+    <title>War3 开发者文档</title>
+    <body style="background:rgb(25, 25, 25);" >
+
+    <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
+    <aside 
+        class="sidebar" 
+        style="background:rgb(25, 25, 25); "
+        >
+    <h1 style="color: aliceblue;" >War3 开发者文档</h1>
+
+    <ul style="color: rgb(200, 200, 200);">
+      <li class="active"> 
+        <p style="color: rgb(0, 200, 0);">成为作者</p><ul><li>
+          <a href="pt/dz.html" >官方对战平台</a></li><li>
+          <a href="pt/11.html" >11对战平台</a> </li></ul></li><li>
+        <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul><li>
+          <p>平台 - 延迟存档</p><ul><li>
+            <a href="">延迟修改积分</a></li><li>
+            <a href="">延迟读取积分</a></li><li>
+            <a href="">延迟修改存档</a></li><li>
+            <a href="">延迟读取存挡</a></li></ul></li><li>
+          <p>坐标 - 数据操作</p><ul><li>
+            <a href="">转换世界坐标为屏幕坐标</a></li></ul><li>
+          <p>模拟 - 属性操作</p><ul><li>
+            <a href="">开启生命模拟系统</a></li><li>
+            <a href="">开启生命模拟系统</a></li></ul><li>
+          <p>加密 - 进制算法</p><ul><li></li>
+            <a href="">动态进制加密</a></li><li>
+            <a href="">动态进制解密</a></li></ul></ul></li>
+          <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul><li>
+            <p>玩家</p><ul><li></li>
+              <a href="">玩家ID</a></li><li>
+              <a href="">添加到玩家组</a></li></ul></ul></li>
+          <p style="color: rgb(0, 200, 0);">常见问题</p><ul><li>
+            <a href="">OpenGL与DirectX</a></li><li>
+            <a href="">优化地图SLK</a></li></ul></li>
+
+    </aside>
+        <section class="content"><article class="markdown-section" id="main">
+        <h2 style="color:rgb(250, 250, 250);" >War3 开发者文档</h2>
+        <p style="color:rgb(200, 200, 200);" >介绍内容：</p>
+        <p style="color:rgb(200, 200, 200);"> </p><br>
+        <p style="color:rgb(200, 200, 200);">交流群：</p><hr>
+        <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
+        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
+        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
+    
+    
+</body></html>
