--- a/ydwe/模拟生命.html
+++ b/ydwe/模拟生命.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<head> 
+<html>
     <meta charset="utf-8"> 
-    <title>War3 技术文档</title> 
-</head>
+    
+    <body style="background-color:rgb(25, 25, 25);">
+        <head> 
+            <title>War3 技术文档</title> 
+        </head>
 
+        <h2 style="color:rgb(255, 255, 255);">函数 ydwe | 首页</h2>
+        
+        <ol style="color:rgb(255, 255, 255);">
+            <li>项目1<li><br>
+            <li>项目2<li><br>
+            <li>项目3<li><br>
+        </ol>
 
-
-<body style="background-color:rgb(25, 25, 25);"></body>
-<h2 style="color:rgb(255, 255, 255);" >
-    函数 ydwe | 首页
-</h2>
-
+    </body>
+</html>
