--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         class="sidebar" 
         style="background:rgb(25, 25, 25); "
         >
-    <h1 style="color: aliceblue;" >War3 开发者文档</h1>
+    <h1 style="color: aliceblue;" ><a href="https://War3tgol.com" >War3 开发者文档</a></h1>
 
     <ul style="color: rgb(200, 200, 200);">
       <li class="active"> 
