--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="translated-ltr">
-
+    var carName = "https://War3tgol.com" 
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
     <body style="background:rgb(25, 25, 25);" >
@@ -10,7 +10,7 @@
         class="sidebar" 
         style="background:rgb(25, 25, 25); "
         >
-    <h1 style="color: aliceblue;" ><a href="https://War3tgol.com" >War3 开发者文档</a></h1>
+    <h1 style="color: aliceblue;" ><a href= carName >War3 开发者文档</a></h1>
 
     <ul style="color: rgb(200, 200, 200);">
       <li class="active"> 
