--- a/pt/dz.html
+++ b/pt/dz.html
@@ -15,8 +15,8 @@
     <ul style="color: rgb(200, 200, 200);">
       <li class="active"> 
         <p style="color: rgb(0, 200, 0);">成为作者</p><ul><li>
-          <a href="dz.html" >官方对战平台</a></li><li>
-          <a href="pt/11.html" >11对战平台</a> </li></ul></li><li>
+          <a href="../pt/dz.html" >官方对战平台</a></li><li>
+          <a href="../pt/11.html" >11对战平台</a> </li></ul></li><li>
         <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul><li>
           <p>平台 - 延迟存档</p><ul><li>
             <a href="">延迟修改积分</a></li><li>
