--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         class="sidebar" 
         style="background:rgb(25, 25, 25); "
         >
-    <h1 style="color: aliceblue;" ><a href= "https://War3tgol.com"  >War3 开发者文档</a></h1>
+    <h1 style="color: aliceblue;" ><a target="frme_align" href= "update.html"  >War3 开发者文档</a></h1>
 
     <ul style="color: rgb(200, 200, 200);">
       <li class="active"> 
         <p style="color: rgb(0, 200, 0);">成为作者</p><ul><li>
-          <a href="pt/dz.html" >官方对战平台</a></li><li>
-          <a href="pt/11.html" >11对战平台</a> </li></ul></li><li>
+          <a target="frme_align" href="pt/dz.html" >官方对战平台</a></li><li>
+          <a target="frme_align"  href="pt/11.html" >11对战平台</a> </li></ul></li><li>
         <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul><li>
           <p>平台 - 延迟存档</p><ul><li>
             <a href="">延迟修改积分</a></li><li>
@@ -37,16 +37,14 @@
           <p style="color: rgb(0, 200, 0);">常见问题</p><ul><li>
             <a href="">OpenGL与DirectX</a></li><li>
             <a href="">优化地图SLK</a></li></ul></li>
-
     </aside>
-        <section class="content"><article class="markdown-section" id="main">
-        <h2 style="color:rgb(250, 250, 250);" >War3 开发者文档</h2>
-        <p style="color:rgb(200, 200, 200);" >介绍内容：</p>
-        <p style="color:rgb(200, 200, 200);"> </p><br>
-        <p style="color:rgb(200, 200, 200);">交流群：</p><hr>
-        <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
-        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
-        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
-    
-    
-</body></html>
+    <iframe 
+    name="frme_align" 
+    width="81%"
+    height="100%"
+    src="update.html" 
+    align="right" 
+    frameborder="0">
+    </iframe>
+  </body>
+</html>
