--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
     <aside 
-        class="sidebar" 
+        class="sidebar"
         style="background:rgb(25, 25, 25); "
         >
     <h1 style="color: aliceblue;" ><a target="frme_align" href= "update.html"  >War3 开发者文档</a></h1>
@@ -18,32 +18,32 @@
           <a target="frme_align"  href="pt/11.html" >11对战平台</a> </li></ul></li><li>
         <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul><li>
           <p>平台 - 延迟存档</p><ul><li>
-            <a href="">延迟修改积分</a></li><li>
-            <a href="">延迟读取积分</a></li><li>
-            <a href="">延迟修改存档</a></li><li>
-            <a href="">延迟读取存挡</a></li></ul></li><li>
+            <a target="frme_align" href="ydwe/延迟修改积分.html" >延迟修改积分</a></li><li>
+            <a  target="frme_align" href="ydwe/延迟读取积分.html" >延迟读取积分</a></li><li>
+            <a  target="frme_align" href="ydwe/延迟修改存档.html" >延迟修改存档</a></li><li>
+            <a  target="frme_align" href="ydwe/延迟读取存挡.html" >延迟读取存挡</a></li></ul></li><li>
           <p>坐标 - 数据操作</p><ul><li>
-            <a href="">转换世界坐标为屏幕坐标</a></li></ul><li>
+            <a  target="frme_align" href="ydwe/转换世界坐标为屏幕坐标.html" >转换世界坐标为屏幕坐标</a></li></ul><li>
           <p>模拟 - 属性操作</p><ul><li>
-            <a href="">开启生命模拟系统</a></li><li>
-            <a href="">开启生命模拟系统</a></li></ul><li>
+            <a  target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li><li>
+            <a  target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul><li>
           <p>加密 - 进制算法</p><ul><li></li>
-            <a href="">动态进制加密</a></li><li>
-            <a href="">动态进制解密</a></li></ul></ul></li>
+            <a  target="frme_align" href="ydwe/动态进制加密.html" >动态进制加密</a></li><li>
+            <a  target="frme_align" href="ydwe/动态进制解密.html" >动态进制解密</a></li></ul></ul></li>
           <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul><li>
-            <p>玩家</p><ul><li></li>
-              <a href="">玩家ID</a></li><li>
-              <a href="">添加到玩家组</a></li></ul></ul></li>
+            <p>界面</p><ul><li></li>
+              <a  target="frme_align" href="ydwe/锁定界面宽高.html" >锁定界面宽高</a></li><li>
+              <a  target="frme_align" href="ydwe/移动界面到绝对位置.html" >移动界面到绝对位置</a></li></ul></ul></li>
           <p style="color: rgb(0, 200, 0);">常见问题</p><ul><li>
-            <a href="">OpenGL与DirectX</a></li><li>
-            <a href="">优化地图SLK</a></li></ul></li>
+            <a  target="frme_align" href="ydwe/OpenGL与DirectX.html" >OpenGL与DirectX</a></li><li>
+            <a  target="frme_align" href="ydwe/优化地图SLK.html" >优化地图SLK</a></li></ul></li>
     </aside>
     <iframe 
     name="frme_align" 
     width="81%"
     height="100%"
     src="update.html" 
-    align="right" 
+    align="right"  
     frameborder="0">
     </iframe>
   </body>
