--- a/update.html
+++ b/update.html
@@ -7,11 +7,16 @@
     <body style="background:rgb(25, 25, 25);" >
     <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
     <article class="markdown-section" >
-        <h2 style="color:rgb(250, 250, 250);" >War3 开发者文档</h2>
-        <p style="color:rgb(200, 200, 200);" >介绍内容：</p>
-        <p style="color:rgb(200, 200, 200);"> </p><br>
-        <p style="color:rgb(200, 200, 200);">交流群：</p><hr>
+        <h2 style="color:rgb(250, 250, 250);">War3 开发者文档</h2>
+        <p style="color:rgb(175, 175, 175);">公益技术分享</p>
+        <p style="color:rgb(200, 200, 200);">
+        本站地址: http://war3tgol.com/<br>
+        技术交流群①：1005116855
+        </p>
+        <hr><!---------------------------------------------------------------->
         <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
-        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
-        <p style="color:rgb(200, 200, 200);" >2022年8月10日：</p>
+        <p style="color:rgb(200, 200, 200);" >
+        2022年8月10日：<br>
+        2022年8月10日：
+        </p>
 </body></html>
