--- a/ydwe/延迟读取存挡.html
+++ b/ydwe/延迟读取存挡.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class="translated-ltr">
-    <meta charset="UTF-8">
-    <title>War3 开发者文档</title>
-    <body style="background:rgb(25, 25, 25);" >
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <title>Lightly-HTML-Project</title>
+  </head>
+  <body style="background:rgb(25, 25, 25);"  >
     <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
     <article class="markdown-section" >
-    <h2 style="color:rgb(250, 250, 250);" >延迟读取存挡</h2>
-</body></html>
+    <h1 style="color:rgb(250, 250, 250);" >延迟读取存挡</h1>
+    <hr>
+    <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
+    <p style="color:rgb(200, 200, 200);" > 读取服务器存档 </p>
+    <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
+      <pre class="language-jass code-copy-added" style="background:rgb(25, 25, 25);" >
+      <code style="background:rgb(35, 35, 35);" >
+        <span style="color:rgb(0, 150, 200);">function </span>
+        <span style="color:rgb(255, 255, 255);">TG_YDWERPGGetRemoteData </span>
+        <span style="color:rgb(0, 150, 200);">takes</span> 
+        <span style="color:rgb(0, 225, 200);">player</span> 
+        <span style="color:rgb(200, 225, 200);">p</span> 
+        <span style="color:rgb(200, 225, 200);">,</span> 
+        <span style="color:rgb(0, 200, 200);">real</span>
+        <span style="color:rgb(0, 200, 200);">value</span>  
+        <span style="color:rgb(0, 150, 200);">returns</span> 
+        <span style="color:rgb(0, 225, 200);">nothing</span>
+      </code>
+      </pre>
+  </body>
+</html>
