--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
 
     <ul style="color: rgb(200, 200, 200);">
       <li class="active"> 
-        <p style="color: rgb(0, 200, 0);">成为作者</p><ul><li>
+        <p style="color: rgb(0, 200, 0);">成为作者</p><ul>
           <a target="frme_align" href="pt/dz.html" >官方对战平台</a></li><li>
           <a target="frme_align"  href="pt/11.html" >11对战平台</a> </li></ul></li><li>
-        <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul><li>
-          <p>平台 - 延迟存档</p><ul><li>
-            <a target="frme_align" href="ydwe/延迟修改积分.html" >延迟修改积分</a></li><li>
-            <a  target="frme_align" href="ydwe/延迟读取积分.html" >延迟读取积分</a></li><li>
-            <a  target="frme_align" href="ydwe/延迟修改存档.html" >延迟修改存档</a></li><li>
-            <a  target="frme_align" href="ydwe/延迟读取存挡.html" >延迟读取存挡</a></li></ul></li><li>
-          <p>坐标 - 数据操作</p><ul><li>
-            <a  target="frme_align" href="ydwe/转换世界坐标为屏幕坐标.html" >转换世界坐标为屏幕坐标</a></li></ul><li>
-          <p>模拟 - 属性操作</p><ul><li>
-            <a  target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li><li>
-            <a  target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul><li>
-          <p>加密 - 进制算法</p><ul><li></li>
-            <a  target="frme_align" href="ydwe/动态进制加密.html" >动态进制加密</a></li><li>
-            <a  target="frme_align" href="ydwe/动态进制解密.html" >动态进制解密</a></li></ul></ul></li>
-          <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul><li>
-            <p>界面</p><ul><li></li>
-              <a  target="frme_align" href="ydwe/锁定界面宽高.html" >锁定界面宽高</a></li><li>
-              <a  target="frme_align" href="ydwe/移动界面到绝对位置.html" >移动界面到绝对位置</a></li></ul></ul></li>
-          <p style="color: rgb(0, 200, 0);">常见问题</p><ul><li>
-            <a  target="frme_align" href="ydwe/OpenGL与DirectX.html" >OpenGL与DirectX</a></li><li>
-            <a  target="frme_align" href="ydwe/优化地图SLK.html" >优化地图SLK</a></li></ul></li>
+        <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul>
+          <p>平台</p><ul>
+            <li><a target="frme_align" href="ydwe/延迟修改积分.html" >延迟修改积分</a></li>
+            <li><a target="frme_align" href="ydwe/延迟读取积分.html" >延迟读取积分</a></li>
+            <li><a target="frme_align" href="ydwe/延迟修改存档.html" >延迟修改存档</a></li>
+            <li><a target="frme_align" href="ydwe/延迟读取存挡.html" >延迟读取存挡</a></li></ul>
+          <p>坐标</p><ul>
+            <li><a target="frme_align" href="ydwe/全局坐标清除.html" >全局坐标清除</a></li>
+            <li><a target="frme_align" href="ydwe/全局坐标设置.html" >全局坐标设置</a></li>
+            <li><a target="frme_align" href="ydwe/全局坐标移动.html" >全局坐标移动</a></li></ul>
+          <p>模拟</p><ul>
+            <li><a target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li>
+            <li><a target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul>
+          <p>加密</p><ul>
+            <li><a target="frme_align" href="ydwe/动态进制加密.html" >动态进制加密</a></li>
+            <li><a target="frme_align" href="ydwe/动态进制解密.html" >动态进制解密</a></li></ul></ul>
+          <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul>
+            <p>界面</p><ul>
+              <li><a target="frme_align" href="ydwe/锁定界面宽高.html" >锁定界面宽高</a></li>
+              <li><a target="frme_align" href="ydwe/移动界面到绝对位置.html" >移动界面到绝对位置</a></li></ul></ul>
+          <p style="color: rgb(0, 200, 0);">常见问题</p><ul>
+            <li><a target="frme_align" href="ydwe/OpenGL与DirectX.html" >OpenGL与DirectX</a></li>
+            <li><a target="frme_align" href="ydwe/优化地图SLK.html" >优化地图SLK</a></li></ul>
     </aside>
     <iframe 
     name="frme_align" 
