--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           <p>坐标</p><ul>
             <li><a target="frme_align" href="ydwe/全局坐标清除.html" >全局坐标清除</a></li>
             <li><a target="frme_align" href="ydwe/全局坐标设置.html" >全局坐标设置</a></li>
-            <li><a target="frme_align" href="ydwe/全局坐标移动.html" >全局坐标移动</a></li></ul>
+            <li><a target="frme_align" href="ydwe/全局坐标移动.html" >全局坐标移动</a></li>
+            <li><a target="frme_align" href="ydwe/全局坐标相对.html" >坐标相对移动</a></li>
+            <li><a target="frme_align" href="ydwe/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
+            <li><a target="frme_align" href="ydwe/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
+            <li><a target="frme_align" href="ydwe/单位转为屏幕.html" >单位坐标转为屏幕</a></li></ul>
           <p>模拟</p><ul>
             <li><a target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li>
             <li><a target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul>
