--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lightly-HTML-Project</title>
+    <title>War3 开发者文档</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
