--- a/ydwe/延迟读取积分.html
+++ b/ydwe/延迟读取积分.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lightly-HTML-Project</title>
+        <title>War3 开发者文档</title>
     </head>
     <body style="background:rgb(25, 25, 25);" >
     <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
