--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
           <a target="frme_align"  href="pt/11.html" >11对战平台</a> </li></ul></li><li>
         <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul>
           <p>平台</p><ul>
-            <li><a target="frme_align" href="ydwe/延迟修改积分.html" >延迟修改积分</a></li>
-            <li><a target="frme_align" href="ydwe/延迟读取积分.html" >延迟读取积分</a></li>
-            <li><a target="frme_align" href="ydwe/延迟修改存档.html" >延迟修改存档</a></li>
-            <li><a target="frme_align" href="ydwe/延迟读取存挡.html" >延迟读取存挡</a></li></ul>
+            <li><a target="frme_align" href="ydwe/PT/延迟修改积分.html" >延迟修改积分</a></li>
+            <li><a target="frme_align" href="ydwe/PT/延迟读取积分.html" >延迟读取积分</a></li>
+            <li><a target="frme_align" href="ydwe/PT/延迟修改存档.html" >延迟修改存档</a></li>
+            <li><a target="frme_align" href="ydwe/PT/延迟读取存挡.html" >延迟读取存挡</a></li></ul>
           <p>坐标</p><ul>
-            <li><a target="frme_align" href="ydwe/全局坐标清除.html" >全局坐标清除</a></li>
-            <li><a target="frme_align" href="ydwe/全局坐标设置.html" >全局坐标设置</a></li>
-            <li><a target="frme_align" href="ydwe/全局坐标移动.html" >全局坐标移动</a></li>
-            <li><a target="frme_align" href="ydwe/全局坐标相对.html" >坐标相对移动</a></li>
-            <li><a target="frme_align" href="ydwe/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
-            <li><a target="frme_align" href="ydwe/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
-            <li><a target="frme_align" href="ydwe/单位转为屏幕.html" >单位坐标转为屏幕</a></li></ul>
+            <li><a target="frme_align" href="ydwe/Coord/全局坐标清除.html" >全局坐标清除</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/全局坐标设置.html" >全局坐标设置</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/全局坐标移动.html" >全局坐标移动</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/全局坐标相对.html" >坐标相对移动</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
+            <li><a target="frme_align" href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li></ul>
           <p>模拟</p><ul>
             <li><a target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li>
             <li><a target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul>
