--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <li><a target="frme_align" href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
             <li><a target="frme_align" href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li></ul>
           <p>模拟</p><ul>
-            <li><a target="frme_align" href="ydwe/开启生命模拟系统.html" >开启生命模拟系统</a></li>
-            <li><a target="frme_align" href="ydwe/开启死亡模拟系统.html" >开启死亡模拟系统</a></li></ul>
+            <li><a target="frme_align" href="update.html" >开启生命模拟系统</a></li>
+            <li><a target="frme_align" href="update.html" >开启死亡模拟系统</a></li></ul>
           <p>加密</p><ul>
-            <li><a target="frme_align" href="ydwe/动态进制加密.html" >动态进制加密</a></li>
-            <li><a target="frme_align" href="ydwe/动态进制解密.html" >动态进制解密</a></li></ul></ul>
+            <li><a target="frme_align" href="update.html" >动态进制加密</a></li>
+            <li><a target="frme_align" href="update.html" >动态进制解密</a></li></ul></ul>
           <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul>
             <p>界面</p><ul>
-              <li><a target="frme_align" href="ydwe/锁定界面宽高.html" >锁定界面宽高</a></li>
-              <li><a target="frme_align" href="ydwe/移动界面到绝对位置.html" >移动界面到绝对位置</a></li></ul></ul>
+              <li><a target="frme_align" href="update.html" >锁定界面宽高</a></li>
+              <li><a target="frme_align" href="update.html" >移动界面到绝对位置</a></li></ul></ul>
           <p style="color: rgb(0, 200, 0);">常见问题</p><ul>
-            <li><a target="frme_align" href="ydwe/OpenGL与DirectX.html" >OpenGL与DirectX</a></li>
-            <li><a target="frme_align" href="ydwe/优化地图SLK.html" >优化地图SLK</a></li></ul>
+            <li><a target="frme_align" href="update.html" >OpenGL与DirectX</a></li>
+            <li><a target="frme_align" href="update.html" >优化地图SLK</a></li></ul>
     </aside>
     <iframe 
     name="frme_align" 
