--- a/ydwe/PT/延迟修改存档.html
+++ b/ydwe/PT/延迟修改存档.html
@@ -19,6 +19,6 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="png/延迟修改存档.png">
+    <img src="../png/延迟修改存档.png">
     </body>
 </html>
