--- a/ydwe/PT/延迟修改积分.html
+++ b/ydwe/PT/延迟修改积分.html
@@ -19,5 +19,5 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="png/延迟修改积分.png">
+    <img src="../png/延迟修改积分.png">
     </body>
