--- a/ydwe/PT/延迟读取存挡.html
+++ b/ydwe/PT/延迟读取存挡.html
@@ -19,7 +19,7 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="png/延迟读取存档.png">
+    <img src="../png/延迟读取存档.png">
     </body>
 </html>
 
