--- a/pt/dz.html
+++ b/pt/dz.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
     <article class="markdown-section" >
       <h4 style="color:rgb(250, 250, 250);" >成为网易对战平台作者</h4>
-      <p style="color:rgb(200, 200, 200);" >作者后台： <a target="_Blank" href="https://rpg.dz.blizzard.cn/">点击访问《作者之家》</a></p>
-      <p style="color:rgb(200, 200, 200);" >编辑器下载：<a target="_Blank"  href="https://rpg.dz.blizzard.cn/editor">点击下载《网易YDWE编辑器》</a></p> 
+      <p style="color:rgb(200, 200, 200);" >作者后台： <a style="text-decoration:none" target="_Blank" href="https://rpg.dz.blizzard.cn/">点击访问《作者之家》</a></p>
+      <p style="color:rgb(200, 200, 200);" >编辑器下载：<a style="text-decoration:none" target="_Blank"  href="https://rpg.dz.blizzard.cn/editor">点击下载《网易YDWE编辑器》</a></p> 
 </body></html>
