--- a/update.html
+++ b/update.html
@@ -10,7 +10,7 @@
         <h2 style="color:rgb(250, 250, 250);">War3 开发者文档</h2>
         <p style="color:rgb(175, 175, 175);">公益技术分享</p>
         <p style="color:rgb(200, 200, 200);">
-        本站地址: <a  target="_Blank" href="http://war3tgol.com/">http://war3tgol.com/</a> 欢迎收藏
+        本站地址: <a style="text-decoration:none"  target="_Blank" href="http://war3tgol.com/">http://war3tgol.com/</a> 欢迎收藏
         <br>
         技术交流群①：1005116855
         </p>
