--- a/ydwe/Coord/全局坐标清除.html
+++ b/ydwe/Coord/全局坐标清除.html
@@ -14,7 +14,7 @@
     </p>
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
         <pre style="background:rgb(35, 35, 35);" >
-            <code style="background:rgb(35, 35, 35);" ><span style="color:rgb(0, 150, 200);">function</span> <span style="color:rgb(255, 255, 255);">TG_CoordEelete</span> <span style="color:rgb(0, 150, 200);">takes</span> <span style="color:rgb(0, 225, 200);">string</span> <span style="color:rgb(250, 250, 250);">key</span> <span style="color:rgb(0, 150, 200);">returns</span> <span style="color:rgb(0, 225, 200);">nothing</span>
+            <code style="background:rgb(35, 35, 35);" ><span style="color:rgb(0, 150, 200);">function</span> <span style="color:rgb(255, 255, 255);">TG_CoordDelete</span> <span style="color:rgb(0, 150, 200);">takes</span> <span style="color:rgb(0, 225, 200);">string</span> <span style="color:rgb(250, 250, 250);">key</span> <span style="color:rgb(0, 150, 200);">returns</span> <span style="color:rgb(0, 225, 200);">nothing</span>
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
