--- a/ydwe/Coord/全局坐标移动.html
+++ b/ydwe/Coord/全局坐标移动.html
@@ -18,5 +18,5 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="../png/全局坐标移动.png">
+    <img src="png/全局坐标移动.png">
     </body>
