--- a/ydwe/Coord/全局坐标相对.html
+++ b/ydwe/Coord/全局坐标相对.html
@@ -18,7 +18,7 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="../png/全局坐标相对.png">
+    <img src="png/全局坐标相对.png">
     </body>
 
 
