--- a/ydwe/Coord/世界转为屏幕.html
+++ b/ydwe/Coord/世界转为屏幕.html
@@ -19,5 +19,5 @@
             </code>
         </pre>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
-    <img src="../png/世界转为屏幕.png">
+    <img src="png/世界转为屏幕.png">
     </body>
