--- a/index.html
+++ b/index.html
@@ -1,58 +1,36 @@
-<!DOCTYPE html>
-<html lang="zh-CN" class="translated-ltr">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html lang="zh-CN">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
-    <body style="background:rgb(25, 25, 25);" >
+    <style>
+    iframe.ui01 {
+      width :20%;
+      height: 100%;;
+    }
+    iframe.ui02 {
+      width :75%;
+      height: 100%;
+    }
+    body{
+        margin:0; 
+        height:100%; 
+        font:italic "微软雅园";
+    }
+    </style>
+    <body style="background:rgb(25, 25, 25);">
+      <iframe 
+        class="ui01"
+        name="frme_align0" 
+        src="list.html" 
+        frameborder="0">
+      </iframe>
+      <iframe 
+        class="ui02"
+        name="frme_align" 
+        src="update.html" 
+        align="right"  
+        frameborder="0">
+      </iframe>
+    </body>
 
-    <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
-    <aside 
-        class="sidebar"
-        style="background:rgb(25, 25, 25); "
-        >
-    <h1 style="color: aliceblue;" ><a target="frme_align" href= "update.html"  >War3 开发者文档</a></h1>
-
-    <ul style="color: rgb(200, 200, 200);"> 
-      <li class="active"> 
-        <p style="color: rgb(0, 200, 0);">成为作者</p><ul>
-          <a target="frme_align" href="pt/dz.html" >官方对战平台</a></li><li>
-          <a target="frme_align"  href="pt/11.html" >11对战平台</a> </li></ul></li><li>
-        <p style="color: rgb(0, 200, 0);">YDWE - 技术</p><ul>
-          <p>平台</p><ul>
-            <li><a target="frme_align" href="ydwe/PT/延迟修改积分.html" >延迟修改积分</a></li>
-            <li><a target="frme_align" href="ydwe/PT/延迟读取积分.html" >延迟读取积分</a></li>
-            <li><a target="frme_align" href="ydwe/PT/延迟修改存档.html" >延迟修改存档</a></li>
-            <li><a target="frme_align" href="ydwe/PT/延迟读取存挡.html" >延迟读取存挡</a></li></ul>
-          <p>坐标</p><ul>
-            <li><a target="frme_align" href="ydwe/Coord/全局坐标清除.html" >全局坐标清除</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/全局坐标设置.html" >全局坐标设置</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/全局坐标移动.html" >全局坐标移动</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/全局坐标相对.html" >坐标相对移动</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/世界转为屏幕.html" >世界坐标转为屏幕</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
-            <li><a target="frme_align" href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li></ul>
-          <p>模拟</p><ul>
-            <li><a target="frme_align" href="update.html" >开启生命模拟系统</a></li>
-            <li><a target="frme_align" href="update.html" >开启死亡模拟系统</a></li></ul>
-          <p>加密</p><ul>
-            <li><a target="frme_align" href="update.html" >动态进制加密</a></li>
-            <li><a target="frme_align" href="update.html" >动态进制解密</a></li></ul></ul>
-          <p style="color: rgb(0, 200, 0);">Wurst - 技术</p><ul>
-            <p>界面</p><ul>
-              <li><a target="frme_align" href="update.html" >锁定界面宽高</a></li>
-              <li><a target="frme_align" href="update.html" >移动界面到绝对位置</a></li></ul></ul>
-          <p style="color: rgb(0, 200, 0);">常见问题</p><ul>
-            <li><a target="frme_align" href="update.html" >OpenGL与DirectX</a></li>
-            <li><a target="frme_align" href="update.html" >优化地图SLK</a></li></ul>
-    </aside>
-    <iframe 
-    
-    name="frme_align" 
-    width="79%"
-    height="100%"
-    src="update.html" 
-    align="right"  
-    frameborder="0">
-    
-    </iframe>
-  </body>
 </html>
