--- a/update.html
+++ b/update.html
@@ -1,12 +1,16 @@
-
-
 <!DOCTYPE html>
 <html lang="zh-CN" class="translated-ltr">
+    <style>
+        body{
+            font:20px "微软雅黑";
+        }
+        a {
+            color: chartreuse;
+            }
+    </style>
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
-    <body style="background:rgb(25, 25, 25);" >
-    <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
-    <article class="markdown-section" >
+    <body  style="background:rgb(25, 25, 25);" >
         <h2 style="color:rgb(250, 250, 250);">War3 开发者文档</h2>
         <p style="color:rgb(175, 175, 175);">公益技术分享</p>
         <p style="color:rgb(200, 200, 200);">
@@ -20,4 +24,5 @@
         2022年8月10日：<br>
         2022年8月10日：
         </p>
-</body></html>
+    </body>
+</html>
