--- a/ydwe/Coord/全局坐标清除.html
+++ b/ydwe/Coord/全局坐标清除.html
@@ -4,19 +4,30 @@
         <meta charset="UTF-8">
         <title>War3 开发者文档</title>
     </head>
-    <body style="background:rgb(25, 25, 25);" >
-    <link rel="stylesheet" href="https://blz.nosdn.127.net/4/duizhan/vue.css">
-    <article class="markdown-section" >
-    <h1 style="color:rgb(250, 250, 250);" >全局坐标清除</h1>
+    <style>
+        body{
+                font:20px "微软雅黑";
+            }
+        p {
+            color:rgb(225, 225, 225);
+        }
+        a {
+            text-decoration:none;
+            color: chartreuse;
+        }
+    </style>
+    <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
+
+    <h1 style="color:rgb(250, 250, 250);" >全局坐标清除</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
     <p style="color:rgb(200, 200, 200);" > 
         清除全局坐标，其实可以不用清除，几乎没影响
-    </p>
+    </p><br><br>
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
-        <pre style="background:rgb(35, 35, 35);" >
+        <div style="background:rgb(35, 35, 35);" ><br>
             <code style="background:rgb(35, 35, 35);" ><span style="color:rgb(0, 150, 200);">function</span> <span style="color:rgb(255, 255, 255);">TG_CoordDelete</span> <span style="color:rgb(0, 150, 200);">takes</span> <span style="color:rgb(0, 225, 200);">string</span> <span style="color:rgb(250, 250, 250);">key</span> <span style="color:rgb(0, 150, 200);">returns</span> <span style="color:rgb(0, 225, 200);">nothing</span>
-            </code>
-        </pre>
+            </code><br><br>
+        </div><br><br>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
     <img src="png/全局坐标清除.png">
     </body>
