--- a/list.html
+++ b/list.html
@@ -64,21 +64,25 @@
             <li><a class="button"  target="frme_align"  href="ydwe/Coord/物品转为屏幕.html" >物品坐标转为屏幕</a></li>
             <li><a class="button"  target="frme_align"  href="ydwe/Coord/单位转为屏幕.html" >单位坐标转为屏幕</a></li>
             </ul>
-            <p>加密</p>
+            <p>字符</p>
             <ul>
-            <li><a class="button" target="frme_align" href="update.html" >动态进制加密</a></li>
-            <li><a class="button" target="frme_align" href="update.html" >动态进制解密</a></li></ul>
+            <li><a class="button" target="frme_align" href="ydwe\code\动态进制加密.html" >动态进制加密</a></li>
+            <li><a class="button" target="frme_align" href="ydwe\code\动态进制解密.html" >动态进制解密</a></li>
             </ul>
+        </ul>
         <p style="color: rgb(0, 200, 0);">Wurst - 技术</p>
             <ul>
-            <p>界面</p><ul>
-                <li><a class="button"  target="frme_align" href="update.html" >锁定界面宽高</a></li>
-                <li><a class="button"  target="frme_align" href="update.html" >移动界面到绝对位置</a></li>
-            </ul></ul>
+                <p>界面</p>
+                <ul>
+                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置像素宽高.html" >设置像素宽高</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置绝对位置.html" >设置绝对位置</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\Frame\设置相对位置.html" >设置相对位置</a></li>
+                </ul>
+            </ul>
         <p style="color: rgb(0, 200, 0);">工具</p>
             <ul>
-            <li><a class="button"  target="frme_align" href="update.html" >lni可视化编辑器</a></li>
-            <li><a class="button"  target="frme_align" href="update.html" >w3xlni</a></li>
+            <li><a class="button"  target="frme_align" href="lni\lni可视化编辑器.html" >lni可视化编辑器</a></li>
+            <li><a class="button"  target="frme_align" href="lni\w3xlni.html" >w3xlni</a></li>
             </ul>
     </aside>
     </body>
