--- a/update.html
+++ b/update.html
@@ -12,7 +12,7 @@
     <title>War3 开发者文档</title>
     <body  style="background:rgb(25, 25, 25);" >
         <h2 style="color:rgb(250, 250, 250);">War3 开发者文档</h2>
-        <p style="color:rgb(175, 175, 175);">公益技术分享</p>
+        <p style="color:rgb(175, 175, 175);">公益技术分享</p><br>
         <p style="color:rgb(200, 200, 200);">
         本站地址: <a style="text-decoration:none"  target="_Blank" href="http://war3tgol.com/">http://war3tgol.com/</a> 欢迎收藏
         <br>
@@ -22,7 +22,6 @@
         <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
         <p style="color:rgb(200, 200, 200);" >
         2022年8月10日：<br>
-        2022年8月10日：
         </p>
     </body>
 </html>
