--- a/ydwe/Coord/全局坐标设置.html
+++ b/ydwe/Coord/全局坐标设置.html
@@ -18,7 +18,7 @@
     </style>
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
 
-    <h1 style="color:rgb(250, 250, 250);" >全局坐标设置</h1><br><br>
+    <h1 style="color:rgb(250, 250, 250);" >全局坐标设置</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
     <p style="color:rgb(200, 200, 200);" > 
         全局设置
