--- a/ydwe/Coord/全局坐标清除.html
+++ b/ydwe/Coord/全局坐标清除.html
@@ -30,4 +30,4 @@
         </div><br><br>
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
     <img src="png/全局坐标清除.png">
-    </body>
+    </body></html>
