--- a/ydwe/Coord/全局坐标相对.html
+++ b/ydwe/Coord/全局坐标相对.html
@@ -21,7 +21,7 @@
     <h1 style="color:rgb(250, 250, 250);" >坐标相对移动</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
     <p style="color:rgb(200, 200, 200);" > 
-        相对坐标移动
+        相对坐标偏移移动坐标到新的位置。
     </p><br><br>
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
         <div style="background:rgb(35, 35, 35);" ><br>
@@ -31,7 +31,7 @@
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
     <img src="png/全局坐标相对.png">
     </body>
-
+    </html>
 
 
 
