--- a/ydwe/Coord/全局坐标移动.html
+++ b/ydwe/Coord/全局坐标移动.html
@@ -21,7 +21,7 @@
     <h1 style="color:rgb(250, 250, 250);" >全局坐标移动</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
     <p style="color:rgb(200, 200, 200);" > 
-        移动坐标
+        移动坐标到新的位置。
     </p><br><br>
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
         <div style="background:rgb(35, 35, 35);" ><br>
@@ -31,3 +31,4 @@
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
     <img src="png/全局坐标移动.png">
     </body>
+</html>
