--- a/ydwe/Coord/全局坐标设置.html
+++ b/ydwe/Coord/全局坐标设置.html
@@ -21,7 +21,7 @@
     <h1 style="color:rgb(250, 250, 250);" >全局坐标设置</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
     <p style="color:rgb(200, 200, 200);" > 
-        全局设置
+        设置坐标x，y，不会异步！可用过该函数取鼠标坐标后再同步环境使用。
     </p><br><br>
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
         <div style="background:rgb(35, 35, 35);" ><br>
@@ -31,3 +31,4 @@
     <h3 style="color:rgb(250, 250, 250);" > 触发器 </h3>
     <img src="png/全局坐标设置.png">
     </body>
+    </html>
