--- a/list.html
+++ b/list.html
@@ -38,8 +38,6 @@
         style="background:rgb(25, 25, 25); "
         >
     <h1 style="color: aliceblue;" ><a  style="text-decoration:none"   target="frme_align"  href= "update.html"  >War3 开发者文档</a></h1>
-    
-       
         <p style="color: rgb(0, 200, 0);">成为作者</p>
         <ul>
             <li><a class="button"  target="frme_align"  href="pt/dz.html" >官方对战平台</a></li>
@@ -56,6 +54,7 @@
             </ul>
             <p>坐标</p>
             <ul>
+            <li><a class="button"  target="frme_align" href="ydwe/Coord/获取全局句柄.html" >获取全局句柄</a></li>
             <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标清除.html" >全局坐标清除</a></li>
             <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标设置.html" >全局坐标设置</a></li>
             <li><a class="button"  target="frme_align" href="ydwe/Coord/全局坐标移动.html" >全局坐标移动</a></li>
@@ -68,6 +67,13 @@
             <ul>
             <li><a class="button" target="frme_align" href="ydwe\code\动态进制加密.html" >动态进制加密</a></li>
             <li><a class="button" target="frme_align" href="ydwe\code\动态进制解密.html" >动态进制解密</a></li>
+            <li><a class="button" target="frme_align" href="ydwe\code\截取字符.html" >截取字符</a></li>
+            <li><a class="button" target="frme_align" href="ydwe\code\替换字符.html" >替换字符</a></li>
+            </ul>
+            <p>逆天</p>
+            <ul>
+            <li><a class="button" target="frme_align" href="ydwe\YD\逆天局部清空.html" >逆天局部清空</a></li>
+            <li><a class="button" target="frme_align" href="ydwe\YD\逆天句柄重置.html" >逆天句柄重置</a></li>
             </ul>
         </ul>
         <p style="color: rgb(0, 200, 0);">Wurst - 技术</p>
