--- a/wurst/Frame/设置绝对位置.html
+++ b/wurst/Frame/设置绝对位置.html
@@ -30,6 +30,12 @@
         #颜色05{
             color:rgb(255, 255, 0);
         }
+        .box{
+        background: #eee;
+        padding: 10px 0;
+        white-space: nowrap;/*文本不会换行，文本会在在同一行上继续*/
+        overflow-y:auto;/*可滑动*/
+        }
     </style>
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
     <h1 style="color:rgb(250, 250, 250);" >设置界面绝对位置</h1><br>
@@ -39,7 +45,7 @@
     </p><br><br>
     
     <h3 style="color:rgb(250, 250, 250);" > Wurst </h3>
-            <div style="background:rgb(35, 35, 35);" ><br>
+            <div class="box" style="background:rgb(35, 35, 35);" ><br>
                 <code style="background:rgb(35, 35, 35);" >
                     <span id="颜色01">function</span> 
                     <span id="颜色03">framehandle.<span id="颜色02">setAbsPoint<span id="颜色05">(<span id="颜色03">framepointtype</span> 
