--- a/ydwe/PT/延迟读取存挡.html
+++ b/ydwe/PT/延迟读取存挡.html
@@ -15,6 +15,12 @@
             text-decoration:none;
             color: chartreuse;
         }
+        div{
+        background: #eee;
+        padding: 10px 0;
+        white-space: nowrap;/*文本不会换行，文本会在在同一行上继续*/
+        overflow-y:auto;/*可滑动*/
+        }
     </style>
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
     <h1 style="color:rgb(250, 250, 250);" >延迟读取存挡</h1><br>
