--- a/update.html
+++ b/update.html
@@ -3,6 +3,7 @@
     <style>
         body{
             font:20px "微软雅黑";
+            
         }
         a {
             color: chartreuse;
@@ -20,8 +21,15 @@
         </p>
         <hr><!---------------------------------------------------------------->
         <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
+        <!---------------------------------------------------------------->
         <p style="color:rgb(200, 200, 200);" >
-        2022年8月10日：<br>
+        2022年8月14日<br>
+        [收录] 函数 - 逆天句柄重置<br>
+        [收录] 函数 - 逆天局部清空<br>
+        [收录] 函数 - 截取字符<br>
+        [收录] 函数 - 替换字符<br>
+        [收录] 函数 - 获取全局句柄<br>
         </p>
+        <p style="color:rgb(200, 200, 200);" >2022年8月13日 建站<br></p>
     </body>
 </html>
