--- a/list.html
+++ b/list.html
@@ -2,36 +2,7 @@
 <html lang="zh-CN" class="translated-ltr">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
-    <style>
-    .button {
-    background-color:rgb(25, 25, 25); /* Green */
-    border: none;
-    color: white;
-    padding: 0px 0px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    cursor: pointer;
-    }
-    .button:hover {
-    background-color: #3e8e41;
-    }
-    body{
-        
-        font:italic "微软雅园";
-        color: #000;
-    }
-    ul{
-        list-style: none;
-    }
-    a {
-            color: rgb(255,255,255);
-            }
-    p {
-            color: rgb(255,255,255);
-            }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <body style="background:rgb(25, 25, 25);" >
     <aside 
         class="sidebar"
