--- a/update.html
+++ b/update.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="translated-ltr">
-    <style>
-        body{
-            font:20px "微软雅黑";
-            
-        }
-        a {
-            color: chartreuse;
-            }
-    </style>
+    <link rel="stylesheet" type="text/css" href="http://war3tgol.com/style.css">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
     <body  style="background:rgb(25, 25, 25);" >
