--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html lang="zh-CN">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
-    <style>
-    iframe.ui01 {
-      width :20%;
-      height: 100%;;
-    }
-    iframe.ui02 {
-      width :75%;
-      height: 100%;
-    }
-    body{
-        margin:0; 
-        height:100%; 
-        font:italic "微软雅园";
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <body style="background:rgb(25, 25, 25);">
       <iframe 
         class="ui01"
