--- a/list.html
+++ b/list.html
@@ -8,7 +8,7 @@
         class="sidebar"
         style="background:rgb(25, 25, 25); "
         >
-    <h1 style="color: aliceblue;" ><a  style="text-decoration:none"   target="frme_align"  href= "update.html"  >War3 开发者文档</a></h1>
+    <h1><a  style="color: aliceblue; text-decoration:none"  target="frme_align"  href= "update.html"  >War3 开发者文档</a></h1>
         <p style="color: rgb(0, 200, 0);">成为作者</p>
         <ul>
             <li><a class="button"  target="frme_align"  href="pt/dz.html" >官方对战平台</a></li>
