--- a/pt/dz.html
+++ b/pt/dz.html
@@ -2,20 +2,9 @@
 <html lang="zh-CN" class="translated-ltr">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
-    <style>
-      body{
-              font:20px "微软雅黑";
-          }
-      p {
-        color:rgb(225, 225, 225);
-      }
-      a {
-        text-decoration:none;
-        color: chartreuse;
-      }
-    </style>
-    <body style="background:rgb(25, 25, 25);" >
-      <h4 style="color:rgb(250, 250, 250);" >成为网易对战平台作者</h4>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
+      <h3 style="color:rgb(250, 250, 250);" >成为网易对战平台作者</h3>
       <p>作者后台： <a target="_Blank"   href="https://rpg.dz.blizzard.cn/">点击访问《作者之家》</a></p>
       <p>编辑器下载：<a target="_Blank"  href="https://rpg.dz.blizzard.cn/editor">点击下载《网易YDWE编辑器》</a></p> 
 </body></html>
