--- a/update.html
+++ b/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="translated-ltr">
-    <link rel="stylesheet" type="text/css" href="http://war3tgol.com/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <title>War3 开发者文档</title>
     <body  style="background:rgb(25, 25, 25);" >
