--- a/wurst/Frame/设置像素宽高.html
+++ b/wurst/Frame/设置像素宽高.html
@@ -4,43 +4,8 @@
         <meta charset="UTF-8">
         <title>War3 开发者文档</title>
     </head>
-    <style>
-        body{
-            font:20px "微软雅黑";
-            }
-        p {
-            color:rgb(225, 225, 225);
-        }
-        a {
-            text-decoration:none;
-            color: chartreuse;
-        }
-        #颜色01 {
-            color:rgb(255, 0, 255);
-        }
-        #颜色02{
-            color: goldenrod;
-        }
-        #颜色03{
-            color:rgb(0, 150, 200);
-        }
-        #颜色04{
-            color:rgb(255, 255, 255);
-        }
-        #颜色05{
-            color:rgb(255, 255, 0);
-        }
-        .box{
-    background: #eee;
-    padding: 10px 0;
-    white-space: nowrap;/*文本不会换行，文本会在在同一行上继续*/
-    overflow-y:auto;/*可滑动*/
-}
-/*自定义滚动条的伪对象选择器, CSS 可以隐藏滚动条*/
-.box::-webkit-scrollbar{
-    display: none;
-}
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
+
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
     <h1 style="color:rgb(250, 250, 250);" >设置像素宽高</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
