--- a/ydwe/Coord/单位转为屏幕.html
+++ b/ydwe/Coord/单位转为屏幕.html
@@ -4,24 +4,7 @@
         <meta charset="UTF-8">
         <title>War3 开发者文档</title>
     </head>
-    <style>
-        body{
-                font:20px "微软雅黑";
-            }
-        p {
-            color:rgb(225, 225, 225);
-        }
-        a {
-            text-decoration:none;
-            color: chartreuse;
-        }
-        div{
-        background: #eee;
-        padding: 10px 0;
-        white-space: nowrap;/*文本不会换行，文本会在在同一行上继续*/
-        overflow-y:auto;/*可滑动*/
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
 
     <h1 style="color:rgb(250, 250, 250);">单位坐标转换屏幕</h1><br>
