--- a/ydwe/PT/延迟读取存挡.html
+++ b/ydwe/PT/延迟读取存挡.html
@@ -4,24 +4,7 @@
         <meta charset="UTF-8">
         <title>War3 开发者文档</title>
     </head>
-    <style>
-        body{
-            font:20px "微软雅黑";
-            }
-        p {
-            color:rgb(225, 225, 225);
-        }
-        a {
-            text-decoration:none;
-            color: chartreuse;
-        }
-        div{
-        background: #eee;
-        padding: 10px 0;
-        white-space: nowrap;/*文本不会换行，文本会在在同一行上继续*/
-        overflow-y:auto;/*可滑动*/
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
     <h1 style="color:rgb(250, 250, 250);" >延迟读取存挡</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
@@ -29,7 +12,6 @@
         读取服务器存档,解决作者在存档读档时服务器数据丢失问题。
         支持双平台使用
     </p><br><br>
-    
     <h3 style="color:rgb(250, 250, 250);" > Jass </h3>
             <div style="background:rgb(35, 35, 35);" ><br>
 
