--- a/list.html
+++ b/list.html
@@ -55,6 +55,12 @@
                     <li><a class="button"  target="frme_align" href="wurst\Frame\设置绝对位置.html" >设置绝对位置</a></li>
                     <li><a class="button"  target="frme_align" href="wurst\Frame\设置相对位置.html" >设置相对位置</a></li>
                 </ul>
+                <p>定义</p>
+                <ul>
+                    <li><a class="button"  target="frme_align" href="wurst\code\万能转换.html" >万能转换</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\code\设置万能定义.html" >设置万能定义</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\code\读取万能定义.html" >读取万能定义</a></li>
+                </ul>
             </ul>
         <p style="color: rgb(0, 200, 0);">工具</p>
             <ul>
