--- a/lni/w3xlni.html
+++ b/lni/w3xlni.html
@@ -4,18 +4,7 @@
         <meta charset="UTF-8">
         <title>War3 开发者文档</title>
     </head>
-    <style>
-        body{
-            font:20px "微软雅黑";
-            }
-        p {
-            color:rgb(225, 225, 225);
-        }
-        a {
-            text-decoration:none;
-            color: chartreuse;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <body style="background:rgb(25, 25, 25); color:rgb(200, 200, 200);">
     <h1 style="color:rgb(250, 250, 250);" >w3xlni</h1><br>
     <h3 style="color:rgb(250, 250, 250);" > 描述 </h3>
