--- a/update.html
+++ b/update.html
@@ -16,11 +16,16 @@
         <!---------------------------------------------------------------->
         <p style="color:rgb(200, 200, 200);" >
         2022年8月14日<br>
+        -YDWE<br>
         [收录] 函数 - 逆天句柄重置<br>
         [收录] 函数 - 逆天局部清空<br>
         [收录] 函数 - 截取字符<br>
         [收录] 函数 - 替换字符<br>
         [收录] 函数 - 获取全局句柄<br>
+        -Wurst<br>
+        [收录] 函数 - 万能转换<br>
+        [收录] 函数 - 设置万能定义<br>
+        [收录] 函数 - 读取万能定义<br>
         </p>
         <p style="color:rgb(200, 200, 200);" >2022年8月13日 建站<br></p>
     </body>
