--- a/list.html
+++ b/list.html
@@ -61,6 +61,14 @@
                     <li><a class="button"  target="frme_align" href="wurst\code\设置万能定义.html" >设置万能定义</a></li>
                     <li><a class="button"  target="frme_align" href="wurst\code\读取万能定义.html" >读取万能定义</a></li>
                 </ul>
+                <p>平台</p>
+                <ul>
+                    <li><a class="button"  target="frme_align" href="wurst\api\平台api.html" >平台api</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\api\延迟修改积分.html" >延迟修改积分</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\api\延迟获取积分.html" >延迟获取积分</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\api\延迟修改存档.html" >读取修改存档</a></li>
+                    <li><a class="button"  target="frme_align" href="wurst\api\延迟获取存档.html" >读取获取存档</a></li>
+                </ul>
             </ul>
         <p style="color: rgb(0, 200, 0);">工具</p>
             <ul>
