--- a/update.html
+++ b/update.html
@@ -15,7 +15,16 @@
         <h4 style="color:rgb(250, 250, 250);" >更新日志</h4>
         <!---------------------------------------------------------------->
         <p style="color:rgb(200, 200, 200);" >
-        2022年8月14日<br>
+        =====2022年8月28日=====<br><br>
+
+        -Wurst<br>
+        [收录] 函数 - 平台api<br>
+        [收录] 函数 - 延迟修改存档<br>
+        [收录] 函数 - 延迟获取存档<br>
+        [收录] 函数 - 延迟修改积分<br>
+        [收录] 函数 - 延迟获取积分<br>
+        <br><br>
+        =====2022年8月14日=====<br><br>
         -YDWE<br>
         [收录] 函数 - 逆天句柄重置<br>
         [收录] 函数 - 逆天局部清空<br>
